# serializer version: 1
# name: test_binary_sensors[binary_sensor.iometer_1isk0000000000_core_attachment_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.iometer_1isk0000000000_core_attachment_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Core attachment status',
    'platform': 'iometer',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'attachment_status',
    'unique_id': '01JQ6G5395176MAAWKAAPEZHV6_attachment_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.iometer_1isk0000000000_core_attachment_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'IOmeter-1ISK0000000000 Core attachment status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.iometer_1isk0000000000_core_attachment_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.iometer_1isk0000000000_core_bridge_connection_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.iometer_1isk0000000000_core_bridge_connection_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Core/Bridge connection status',
    'platform': 'iometer',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'connection_status',
    'unique_id': '01JQ6G5395176MAAWKAAPEZHV6_connection_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.iometer_1isk0000000000_core_bridge_connection_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'IOmeter-1ISK0000000000 Core/Bridge connection status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.iometer_1isk0000000000_core_bridge_connection_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
